# LAB_a_stack_of_dishes

./: CMakeLists.txt  README.md  main.cpp
src/: FrogStack.hpp  dish.hpp
tests/: FrogStack_test.cpp
