cmake_minimum_required(VERSION 3.24)

project(a_stack_of_dishes)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

Include(FetchContent)

FetchContent_Declare(
  Catch2
  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
  GIT_TAG        v3.8.1
)

FetchContent_MakeAvailable(Catch2)

add_executable(FrogStack_test tests/FrogStack_test.cpp src/FrogStack.hpp src/dish.hpp)
add_executable(main main.cpp src/FrogStack.hpp)

target_link_libraries(FrogStack_test PRIVATE Catch2::Catch2WithMain)
